feat: gestion completa de servicios y productos (crear, editar y borrar) en Stock
